# Carbon

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASE_SETUP.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: release.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/--dir-name/: package.json
client/--dir-name/src/: styles.css
client/--dir-name/src-tauri/: Cargo.toml  tauri.conf.json
client/--dir-name/src-tauri/src/: main.rs
client/public/: manifest.json  sw.js
client/scripts/: generate-icons.mjs
client/src/: App.jsx  index.css
client/src-tauri/: Cargo.toml  Entitlements.debug.plist  Entitlements.plist  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: cloudkit.rs  lib.rs  main.rs
client/src-tauri/swift/: Package.swift  build.sh
client/src-tauri/swift/Sources/: Bridge.swift  CarbonCloudKit.h  CloudKitManager.swift  SyncManager.swift
client/src/components/: AddBookmarkModal.jsx  Board.jsx  BookmarkCard.jsx  BookmarkFolderCard.jsx  BookmarksView.jsx  Card.jsx  CardContextMenu.jsx  CardModal.jsx  Column.jsx  CreateFolderModal.jsx  DraggableBookmarkCard.jsx  EditFolderModal.jsx  NoteCard.jsx  NoteEditorModal.jsx  NotesView.jsx  Sidebar.jsx  SyncStatus.jsx  TagContextMenu.jsx  TitlebarDragRegion.jsx  UpdateNotification.jsx
client/src/hooks/: useHotkeys.js
client/src/store/: boardStore.js
data/: boards.json
server/: index.js  package-lock.json  package.json  production.js
